--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Friendship -- Juvenile fiction'
 - !lcsh 'Invalids -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: Mountain-Laurel and Maidenhair
 url: http://www.gutenberg.org/ebooks/37807
